semantic updates to portfolip page

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -66,7 +66,7 @@
       </ul>
     </nav>
   </header>
-  <section id="intro">
+  <section id="intro" class="intro-top-blue">
     <div class="top-blue">
       <h1 class="md-center fade-in">Let us help you transform your content!</h1>
       <div class="icon-style-container icon-fade-in">
@@ -88,76 +88,78 @@
     <div class="video-example">
     <!-- Media Scroller -->
       <h4 class="media-scroller-title">Video Delivery Types</h4>
+      
       <div class="media-scroller-container">      
-      <div class="media-scroller-header">
-        <div class="media-scroller-icons">
-          <button class="media-scroller-icon left" id="scroll_left">  
-            <svg viewBox="0 0 32 32" aria-hidden="true" class="chevron-left" focusable="false" role="img"><path stroke="none" d="M29.41 8.59a2 2 0 00-2.83 0L16 19.17 5.41 8.59a2 2 0 00-2.83 2.83l12 12a2 2 0 002.82 0l12-12a2 2 0 00.01-2.83z"></path></svg>
-          </button> 
-          <button class="media-scroller-icon right" id="scroll_right">
-            <svg viewBox="0 0 32 32" aria-hidden="true" class="chevron-right" focusable="false" role="img"><path stroke="none" d="M29.41 8.59a2 2 0 00-2.83 0L16 19.17 5.41 8.59a2 2 0 00-2.83 2.83l12 12a2 2 0 002.82 0l12-12a2 2 0 00.01-2.83z"></path></svg>
-          </button>
+        <div class="media-scroller-header">
+          <div class="media-scroller-icons">
+            <button class="media-scroller-icon left" id="scroll_left">  
+              <svg viewBox="0 0 32 32" aria-hidden="true" class="chevron-left" focusable="false" role="img"><path stroke="none" d="M29.41 8.59a2 2 0 00-2.83 0L16 19.17 5.41 8.59a2 2 0 00-2.83 2.83l12 12a2 2 0 002.82 0l12-12a2 2 0 00.01-2.83z"></path></svg>
+            </button> 
+            <button class="media-scroller-icon right" id="scroll_right">
+              <svg viewBox="0 0 32 32" aria-hidden="true" class="chevron-right" focusable="false" role="img"><path stroke="none" d="M29.41 8.59a2 2 0 00-2.83 0L16 19.17 5.41 8.59a2 2 0 00-2.83 2.83l12 12a2 2 0 002.82 0l12-12a2 2 0 00.01-2.83z"></path></svg>
+            </button>
+          </div>
         </div>
-      </div>
 
-      <div class="media-scroller snaps-inline" tabindex="0">
-        <div class="media-element">
-          <div class="iframe-wrapper">
-            <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_rj7gw8s5&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_ra9wqw3o%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%; height: 345px; border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="Morning at the Barn(s)"></iframe>
-          </div>  
-          <p class="title">Course Introduction Video</p>
-          <p class="sub-title">ANC107 - Introduction to Equine Science</p>
-          <span class="sr-only"><a href="#">1</a></span>
-        </div>
+        <div class="media-scroller snaps-inline" tabindex="0">
+          <div class="media-element">
+            <div class="iframe-wrapper">
+              <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_rj7gw8s5&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_ra9wqw3o%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%; height: 345px; border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="Morning at the Barn(s)"></iframe>
+            </div>  
+            <p class="title">Course Introduction Video</p>
+            <p class="sub-title">ANC107 - Introduction to Equine Science</p>
+            <span class="sr-only"><a href="#">1</a></span>
+          </div>
         
-        <div class="media-element">
-          <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_xj33812y&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_y7s3jrwf%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%;height: 345px;border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="SummerCampUNconference"></iframe>
-          <p class="title">Promo Video</p>
-          <p class="sub-title">Learning Design Summer Camp: The UNconference</p>
-          <span class="sr-only"><a href="#">2</a></span>
-        </div>
-        <div class="media-element" >
-          <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_160f7q6d&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_7olxbk8i%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%;height: 346px;border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="PSYCH441 Course Introduction"></iframe>
-          <p class="title">Course Introduction Video</p>
-          <p class="sub-title">PSYCH441 - Healthy Psychology</p>
-          <span class="sr-only"><a href="#">3</a></span>
-        </div>
-        <div class="media-element">
-          <img src="https://images.unsplash.com/photo-1640938776314-4d303f8a1380?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
-          <p class="title">Chair</p>
-          <span class="sr-only"><a href="#">4</a></span>
-        </div>
-        <div class="media-element">
-          <img src="https://images.unsplash.com/photo-1641259041823-e09935369105?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
-          <p class="title">Ut enim ad minim veniam</p>
-          <span class="sr-only"><a href="#">5</a></span>
-        </div>
-        <div class="media-element">
-          <img src="https://images.unsplash.com/photo-1642543492481-44e81e3914a7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
-          <p class="title">Duis aute irure dolor</p>
-        </div>
-        <div class="media-element">
-          <img src="https://images.unsplash.com/photo-1641118961077-440391095cdc?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
-          <p class="title">Cillum dolore eu</p>
-        </div>
-        <div class="media-element">
-          <img src="https://images.unsplash.com/photo-1640767014413-b7d27c58b058?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc5NQ&ixlib=rb-1.2.1&q=80&w=400" alt="">
-          <p class="title"></p>
-        </div>
-        <div class="media-element">
-          <img src="https://images.unsplash.com/photo-1640948612546-3b9e29c23e98?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc5NQ&ixlib=rb-1.2.1&q=80&w=400" alt="">
-          <p class="title">Excepteur sint occaecat cupidatat non proident</p>
-        </div>
-        <div class="media-element">
-          <img src="https://images.unsplash.com/photo-1642484865851-111e68695d71?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc5NQ&ixlib=rb-1.2.1&q=80&w=400" alt="">
-          <p class="title">At lectus urnaVestibulum</p>
+          <div class="media-element">
+            <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_xj33812y&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_y7s3jrwf%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%;height: 345px;border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="SummerCampUNconference"></iframe>
+            <p class="title">Promo Video</p>
+            <p class="sub-title">Learning Design Summer Camp: The UNconference</p>
+            <span class="sr-only"><a href="#">2</a></span>
+          </div>
+          <div class="media-element" >
+            <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_160f7q6d&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_7olxbk8i%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%;height: 346px;border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="PSYCH441 Course Introduction"></iframe>
+            <p class="title">Course Introduction Video</p>
+            <p class="sub-title">PSYCH441 - Healthy Psychology</p>
+            <span class="sr-only"><a href="#">3</a></span>
+          </div>
+          <div class="media-element">
+            <img src="https://images.unsplash.com/photo-1640938776314-4d303f8a1380?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
+            <p class="title">Chair</p>
+            <span class="sr-only"><a href="#">4</a></span>
+          </div>
+          <div class="media-element">
+            <img src="https://images.unsplash.com/photo-1641259041823-e09935369105?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
+            <p class="title">Ut enim ad minim veniam</p>
+            <span class="sr-only"><a href="#">5</a></span>
+          </div>
+          <div class="media-element">
+            <img src="https://images.unsplash.com/photo-1642543492481-44e81e3914a7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
+            <p class="title">Duis aute irure dolor</p>
+          </div>
+          <div class="media-element">
+            <img src="https://images.unsplash.com/photo-1641118961077-440391095cdc?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
+            <p class="title">Cillum dolore eu</p>
+          </div>
+          <div class="media-element">
+            <img src="https://images.unsplash.com/photo-1640767014413-b7d27c58b058?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc5NQ&ixlib=rb-1.2.1&q=80&w=400" alt="">
+            <p class="title"></p>
+          </div>
+          <div class="media-element">
+            <img src="https://images.unsplash.com/photo-1640948612546-3b9e29c23e98?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc5NQ&ixlib=rb-1.2.1&q=80&w=400" alt="">
+            <p class="title">Excepteur sint occaecat cupidatat non proident</p>
+          </div>
+          <div class="media-element">
+            <img src="https://images.unsplash.com/photo-1642484865851-111e68695d71?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc5NQ&ixlib=rb-1.2.1&q=80&w=400" alt="">
+            <p class="title">At lectus urnaVestibulum</p>
+          </div>
         </div>
       </div>
     </div>
   </section>
   
-  <section class="design-section" id="design">
-    <h2 class="center" >Design</h2>
+  <section id="design" class="design-section">
+    <h2 class="center">Design</h2>
       <p>Short intro text explaining Before and After example section?</p>
       <p>Do we add about course refreshments? Everiz/highcharts?</p>
 <!-- TODO update responsive images -->
@@ -185,8 +187,9 @@
             <img src="/assets/images/MBADM830_After_L8.png" alt="" class="after-image" loading="lazy">
           </div>
   </section>
-  <section class="interactive-page">
-    <h3 id="design">Interactive</h3>
+
+  <section id="interactive" class="interactive-page">
+    <h3>Interactive</h3>
     <p> From our H5P instance, demonstrating various content types and offering inspiration for transforming course materials into engaging, interactive experiences.</p>
     <div style="min-width: 750px; max-width: 1080px;">
       <iframe allow="autoplay *; geolocation *; microphone *; camera *; midi *; encrypted-media *" allowfullscreen="allowfullscreen" aria-label="OL3400_SignificantLearning" frameborder="0" height="637" src="https://psu.h5p.com/content/1291925922613556468/embed" width="1088">
