code clean up for readability

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -82,7 +82,7 @@
       </div>
     </div>
   </section>
-  
+  <!-- TODO: add arrow to bottom right for navigating back to the top -->
   <section id="video" class="video-section">
     <h2 class="center">Video & Audio </h2>
     <div class="video-example">
@@ -189,7 +189,7 @@
   </section>
 
   <section id="interactive" class="interactive-page">
-    <h3>Interactive</h3>
+    <h2 class="center">Interactive</h2>
     <p> From our H5P instance, demonstrating various content types and offering inspiration for transforming course materials into engaging, interactive experiences.</p>
     <div style="min-width: 750px; max-width: 1080px;">
       <iframe allow="autoplay *; geolocation *; microphone *; camera *; midi *; encrypted-media *" allowfullscreen="allowfullscreen" aria-label="OL3400_SignificantLearning" frameborder="0" height="637" src="https://psu.h5p.com/content/1291925922613556468/embed" width="1088">
