TODO: finish fixing weird back border appearing with iframes when border-radius is applied

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -112,13 +112,17 @@
           </div>
         
           <div class="media-element">
-            <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_xj33812y&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_y7s3jrwf%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%;height: 345px;border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="SummerCampUNconference"></iframe>
+            <div class="iframe-wrapper">
+              <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_xj33812y&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_y7s3jrwf%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="height:346px; border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="SummerCampUNconference"></iframe>
+            </div>
             <p class="title">Promo Video</p>
             <p class="sub-title">Learning Design Summer Camp: The UNconference</p>
             <span class="sr-only"><a href="#">2</a></span>
           </div>
-          <div class="media-element" >
-            <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_160f7q6d&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_7olxbk8i%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%;height: 346px;border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="PSYCH441 Course Introduction"></iframe>
+          <div class="media-element">
+            <div class="iframe-wrapper">
+              <iframe id="kaltura_player" src='https://cdnapisec.kaltura.com/p/2356971/embedPlaykitJs/uiconf_id/54679262?iframeembed=true&amp;entry_id=1_160f7q6d&amp;config%5Bprovider%5D=%7B%22widgetId%22%3A%221_7olxbk8i%22%7D&amp;config%5Bplayback%5D=%7B%22startTime%22%3A0%7D'  style="width: 100%; height:346px; border: 0;" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" title="PSYCH441 Course Introduction"></iframe>
+            </div>
             <p class="title">Course Introduction Video</p>
             <p class="sub-title">PSYCH441 - Healthy Psychology</p>
             <span class="sr-only"><a href="#">3</a></span>
