--- a/pages/services.html
+++ b/pages/services.html
@@ -117,12 +117,12 @@
   <section class="interactive-page">
     <div class="service-card reverse">
       <div class="service-image col">
-        <img class="box-shadow-right" src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTR8fFVJJTIwZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" width="350" height="330">
+        <img class="box-shadow-right" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="video shoot scene in a library" width="500" height="330">
       </div>
 
       <div class="service-card-text video-text col">
         <h3 class="service-card-title">Interactive Content </h3>
-        <p>Simulation/Interactive/360 Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
+        <p>We offer services and licensing to create interactive features for your course. H5P, Everiz, Captivate etc. to create various interactives depending on what aligns best for your content and objectives. All services have been throughly tested with accessibility and user experience the forefront.</p>
         <a class="view-more" href="./portfolio.html#interactive">View More</a>
       </div>
 
