refactor: reduce code repetition for cleaner logic

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -85,7 +85,7 @@
   <!-- TODO: add arrow to bottom right for navigating back to the top -->
   <section id="video" class="video-section">
     <h2 class="center">Video & Audio </h2>
-    <p class="section-intro-content">Placeholder text:Labore consectetur nisi aute ad aute ullamco magna. Duis enim pariatur occaecat eiusmod excepteur Lorem ipsum adipisicing pariatur. Tempor commodo commodo occaecat culpa incididunt qui exercitation. Eiusmod do eiusmod eu dolore eiusmod sint do esse ad magna ex. Nulla eiusmod proident excepteur nulla exercitation ea sit. </p>
+    <p class="section-intro-content">Our Multimedia Team provides comprehensive video and audio solutions to enhance learning, communication, and engagement. From lecture capture and podcast production to custom course introduction videos, we offer tailored services to meet the evolving needs of faculty and staff.  </p>
     <div class="video-example">
     <!-- Media Scroller -->
       <h4 class="media-scroller-title">Video Delivery Types</h4>
