Bug: design in media-scroller fix, font-weight addition added

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -82,7 +82,7 @@
       </div>
     </div>
   </section>
-  <!-- TODO: add arrow to bottom right for navigating back to the top -->
+  <!-- TODO: add arrow to bottom right for navigating back to the top or Sticky navigation -->
   <section id="video" class="video-section">
     <h2 class="center">Video & Audio </h2>
     <p class="section-intro-content">Our Multimedia Team provides comprehensive video and audio solutions to enhance learning, communication, and engagement. From lecture capture and podcast production to custom course introduction videos, we offer tailored services to meet the evolving needs of faculty and staff.  </p>
