Fixes to spacing and links

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -66,6 +66,7 @@
       </ul>
     </nav>
   </header>
+  <!-- Main Navigation End -->
   <section id="intro" class="intro-top-blue">
     <div class="top-blue">
       <h1 class="md-center fade-in">Let us help you transform your content!</h1>
