--- a/pages/journal.html
+++ b/pages/journal.html
@@ -52,12 +52,12 @@
       <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
       <ul>
         <li tabindex="0"><a href="services.html">What We Do</a></li>
-        <li class="drop-down" tabindex="0" ><a href="#">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
+        <li class="drop-down" tabindex="0" ><a href="./portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
           <div class="nav-dropdown">
             <ul>
-              <li><a href="portfolio.html#video">Video & Audio</a></li>
-              <li><a href="portfolio.html#design">Visual Design</a></li>
-              <li><a href="portfolio.html#interactive">Interactive</a></li>
+              <li><a href="/pages/portfolio.html#video">Video & Audio</a></li>
+              <li><a href="/pages/portfolio.html#design">Visual Design</a></li>
+              <li><a href="/pages/portfolio.html#interactive">Interactive</a></li>
             </ul>
           </div>
         </li> 
