Journal: content updates, adjustment to grid. Resources: size adjustment to testimonials

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,51 +58,52 @@
   <!-- Logo -->
     <!-- <img class="wc-logo" src="/assets/images/PSU_Logo_white.svg" alt="Penn State World Campus Logo" /></a> -->
   <!-- Main Navigation -->
-  <nav class="dark-blue-500" id="main_nav">
-    <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
-    <ul>
-      <li tabindex="0"><a href="#">What We Do</a></li>
-      <li class="drop-down" tabindex="0" ><a href="./portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
-        <div class="nav-dropdown">
-          <ul>
-            <li><a href="./portfolio.html#video">Video & Audio</a></li>
-            <li><a href="./portfolio.html#design">Visual Design</a></li>
-            <li><a href="./portfolio.html#interactive">Interactive</a></li>
-          </ul>
+    <nav class="dark-blue-500" id="main_nav">
+      <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
+      <ul>
+        <li tabindex="0"><a href="#">What We Do</a></li>
+        <li class="drop-down" tabindex="0" ><a href="./portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
+          <div class="nav-dropdown">
+            <ul>
+              <li><a href="./portfolio.html#video">Video & Audio</a></li>
+              <li><a href="./portfolio.html#design">Visual Design</a></li>
+              <li><a href="./portfolio.html#interactive">Interactive</a></li>
+            </ul>
+          </div>
+        </li>
+        <li tabindex="0"><a href="./journal.html">Journal</a></li>
+        <li tabindex="0"><a href="./resources.html">Resources</a></li>
+        <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section>
+    <div class="work-container">
+      <p class="work">
+        Content with what all we provide for our unit.
+      </p>
+    </div>
+    <div class="partners-container">
+      <p class="partners">
+        Mentioning of working with accessibility and editing to provide quality multimedia assets to our customers.
+      </p>
+    </div>
+    <!-- Testimonials Section -->
+    <div class="testimonial-container">
+      <div class="progress-bar"></div>
+      <div class="fas fa-quote-right fa-quote"></div>
+      <div class="fas fa-quote-left fa-quote"></div>
+      <p class="testimonial">
+        Sit sint et est officia velit consequat pariatur nostrud nostrud laboris. Qui laboris incididunt elit laboris. Ipsum laborum ea reprehenderit irure enim excepteur fugiat ea fugiat aliquip ullamco dolor labore enim.
+      </p>
+      <div class="user">
+        <img src="https://cataas.com/cat/cute" alt="user image" class="user-image">
+        <div class="user-details">
+          <h4 class="username">Allie Martz
+          <p class="role">Multimedia Specialist</p>
         </div>
-      </li>
-      <li tabindex="0"><a href="./journal.html">Journal</a></li>
-      <li tabindex="0"><a href="./resources.html">Resources</a></li>
-      <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-  <div class="work-container">
-    <p class="work">
-      Content with what all we provide for our unit.
-    </p>
-  </div>
-  <div class="partners-container">
-    <p class="partners">
-      Mentioning of working with accessibility and editing to provide quality multimedia assets to our customers.
-    </p>
-  </div>
-  <!-- Testimonials Section -->
-  <div class="testimonial-container">
-    <div class="progress-bar"></div>
-    <div class="fas fa-quote-right fa-quote"></div>
-    <div class="fas fa-quote-left fa-quote"></div>
-    <p class="testimonial">
-      Sit sint et est officia velit consequat pariatur nostrud nostrud laboris. Qui laboris incididunt elit laboris. Ipsum laborum ea reprehenderit irure enim excepteur fugiat ea fugiat aliquip ullamco dolor labore enim.
-    </p>
-    <div class="user">
-      <img src="https://cataas.com/cat/cute" alt="user image" class="user-image">
-      <div class="user-details">
-        <h4 class="username">Allie Martz
-        <p class="role">Multimedia Specialist</p>
       </div>
     </div>
-  </div>
 
   <!-- TODO: Add in form to email -->
 
@@ -116,6 +117,7 @@
     </div>
   </div> -->
 
+  </section>
 
 <!-- FOOTER -->
 
