--- a/pages/resources.html
+++ b/pages/resources.html
@@ -59,27 +59,31 @@
   <!-- Logo -->
     <!-- <img class="wc-logo" src="/assets/images/PSU_Logo_white.svg" alt="Penn State World Campus Logo" /></a> -->
   <!-- Main Navigation -->
-  <nav class="dark-blue-500" id="main_nav">
-    <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
-    <ul>
-      <li tabindex="0"><a href="#">What We Do</a></li>
-      <li class="drop-down" tabindex="0" ><a href="./portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
-        <div class="nav-dropdown">
-          <ul>
-            <li><a href="./portfolio.html#video">Video & Audio</a></li>
-            <li><a href="./portfolio.html#design">Visual Design</a></li>
-            <li><a href="./portfolio.html#interactive">Interactive</a></li>
-          </ul>
-        </div>
-      </li>
-      <li tabindex="0"><a href="./journal.html">Journal</a></li>
-      <li tabindex="0"><a href="./resources.html">Resources</a></li>
-      <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-  <h1>MM - Resources</h1>
-  <h2>Documentation for videoshoots, self-recording best practices</h2>
+    <nav class="dark-blue-500" id="main_nav">
+      <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
+      <ul>
+        <li tabindex="0"><a href="#">What We Do</a></li>
+        <li class="drop-down" tabindex="0" ><a href="./portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
+          <div class="nav-dropdown">
+            <ul>
+              <li><a href="./portfolio.html#video">Video & Audio</a></li>
+              <li><a href="./portfolio.html#design">Visual Design</a></li>
+              <li><a href="./portfolio.html#interactive">Interactive</a></li>
+            </ul>
+          </div>
+        </li>
+        <li tabindex="0"><a href="./journal.html">Journal</a></li>
+        <li tabindex="0"><a href="./resources.html">Resources</a></li>
+        <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section>
+    <h1>MM - Resources</h1>
+    <h2>Documentation for videoshoots, self-recording best practices</h2>
+  </section>
+  
   <footer class="blue">
     <!-- Logo -->
     <div class="footer-text-logo">
