size adjustment to carousel

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
       </ul>
     </nav>
   </header>
-  <main>
+  
+  <main class="home">
     <section class="hero">
       <div class="carousel-container" id="carousel-imgs" role="region" aria-label="carousel">
         <img class="carousel-img" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" role="group" aria-roledescription="slide" aria-labelledby="carousel_item-1" >
