--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MM Studio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"  />
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 <body class="main">
@@ -67,7 +67,7 @@
       </ul>
     </nav>
   </header>
-  
+
   <main class="home">
     <section class="hero">
       <div class="carousel-container" id="carousel-imgs" role="region" aria-label="carousel">
