--- a/pages/resources.html
+++ b/pages/resources.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MM - Resources</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../styles/styles.css">
 </head>
 
 <body class="services">
@@ -83,7 +83,7 @@
     <h1>MM - Resources</h1>
     <h2>Documentation for videoshoots, self-recording best practices</h2>
   </section>
-  
+
   <footer class="blue">
     <!-- Logo -->
     <div class="footer-text-logo">
