--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>MM Studio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"  />
   <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"  />
+  <link rel="stylesheet" href="./styles/services.css">
 </head>
 
 <body class="main">
@@ -98,6 +100,46 @@
     </section>
     <section class="weAre">
       <p class="right">"...we create amazing content."</p>
+    </section>
+
+    <h2 class="main-title center blue-underline">What We Do</h2>
+
+    <section id="video-section" class="video-section service-section">
+      <div class="service-card reverse">
+        <div class="service-image">
+          <img class="box-shadow-right" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" width="500" height="330">
+        </div>
+
+        <div class="service-card-text video-text col">
+          <h3 class="service-card-title">Video & Audio </h3>
+          <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
+          <a class="view-more" href="./portfolio.html#video">View More</a>
+        </div>
+      </div>
+    </section>
+    
+    <section class="design-section service-section">
+      <div class="service-card">
+        <div class="service-image">
+          <img class="box-shadow-left" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes" width="500" height="330">
+        </div>
+        <div class="service-card-text">
+          <h3 id="design" class="service-card-title">Design & Graphics</h3>
+          <p>Design boards, product manuals, illustrations, content graphics and animated gifs/banners. Applied across the course content graphics, it results in a visually cohesive look and an ascetically-pleasing user experience.  </p>
+          <a href="./portfolio.html#design" class="view-more">View More</a>
+        </div>
+      </div>
+    </section>
+    <section class="interactive-page service-section">
+      <div class="service-card reverse">
+        <div class="service-image col">
+          <img class="box-shadow-right" src="https://images.unsplash.com/photo-1502945015378-0e284ca1a5be?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="video shoot scene in a library" width="500" height="330">
+        </div>
+        <div class="service-card-text video-text col">
+          <h3 class="service-card-title">Interactive Content </h3>
+          <p>We offer services and licensing to create interactive features for your course. H5P, Everiz, Captivate etc. to create various interactives depending on what aligns best for your content and objectives. All services have been throughly tested with accessibility and user experience the forefront.</p>
+          <a class="view-more" href="./portfolio.html#interactive">View More</a>
+        </div>
     </section>
   </main>
 
