TODO: fix 3rd card down

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         </div>
       </div>
     </section>
+    <!-- TODO: Fix this section -->
     <section class="interactive-page service-section">
       <div class="service-card reverse">
         <div class="service-image col">
