Size adjustments to carousel and margin for sections starts

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h2>Welcome to our space.</h2>
       </div>
 
-      <button class="btn-1"><a class="explore-button" href="pages/services.html">EXPLORE <span><svg class="animation" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+      <button class="btn-1"><a class="explore-button" href="#service_section_title">EXPLORE <span><svg class="animation" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
         <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H0V9.039H12.052L6.545,14.545,8,16l8-8Z" fill="#1a3651"/>
       </svg>
       </span></a></button>
@@ -102,7 +102,7 @@
       <p class="right">"...we create amazing content."</p>
     </section>
 
-    <h2 class="main-title center blue-underline">What We Do</h2>
+    <h2 id="service_section_title" class="service-section-title center blue-underline">What We Do</h2>
 
     <section id="video-section" class="video-section service-section">
       <div class="service-card reverse">
